compiler/testData/asJava/lightClasses/lightClasses/compilationErrors/WrongAnnotations.java
public final class A /* A*/ {
  @org.jetbrains.annotations.NotNull()
  public static final A.Companion Companion;

  @kotlin.jvm.JvmStatic()
  public static final void f3();//  f3()

  public  A();//  .ctor()


public static final class Companion /* A.Companion*/ {
  @kotlin.jvm.JvmName()
  public final void f4();//  f4()

  @kotlin.jvm.JvmName(name = "realName")
  public final void realName();//  realName()

  @kotlin.jvm.JvmName(name = 1)
  public final void f2();//  f2()

  @kotlin.jvm.JvmOverloads()
  public final void f5();//  f5()

  @kotlin.jvm.JvmOverloads()
  public final void f6();//  f6()

  @kotlin.jvm.JvmStatic()
  public final void f3();//  f3()

  private  Companion();//  .ctor()

}}